aws/k8s/monitoring/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: monitoring
spec:
  rules: 
  - host: prometheus.geek.zone
    http:
      paths:
      - path: /
        pathType: Prefix          
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus  
            port: 
              number: 9090
  ingressClassName: nginx
